--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
