added filter logic, handle fetch response with filtered image preview, cleaned up some code

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["client/src/*"]
+      "@/*": ["./client/src/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
