--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11",
