--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview --config vite.config.js",
     "format": "prettier --write client/src/ server/",
     "dev-server": "nodemon server/server.js",
-    "server": "node server/server.js"
+    "server": "node server/server.js",
+    "lint": "eslint ./client ./server"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -25,7 +26,12 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "@eslint/markdown": "^7.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "prettier": "3.5.3",
     "vite": "^7.0.0",
